fix Add horizontal scrollbar to the website #1746

--- a/webdriver-ts-results/src/assets/styles/global.css
+++ b/webdriver-ts-results/src/assets/styles/global.css
@@ -32,7 +32,6 @@ td {
   max-width: 100%;
 }
 .results__table-container {
-  overflow-x: auto;
 }
 .results__table {
   font-size: 11px;
